Added CRUD operations for Task
